--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "boostrap": "^2.0.0",
     "bootstrap": "^4.1.3",
-    "chai": "^4.2.0",
     "eslint": "^5.9.0",
     "eslint-plugin-jest": "^22.1.2",
     "htmlhint": "^0.10.1",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "node-fetch": "^2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0"
   }
 }
